--- a/style.css
+++ b/style.css
@@ -36,9 +36,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-body{
-  background-color: #eb4d4b;
-}
 .kecil{
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
@@ -51,4 +48,37 @@ body{
 }
 .test{
   padding: 25px;
+}
+.logoatas{
+  width: 75%;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+.kenangan{
+  text-align: left;
+  font-family: "Circular-Bold";
+  font-size: 76px;
+  color: #161743;
+  line-height: 1.26;
+}
+.title{
+  left: 0px;
+  top: 199px;
+  vertical-align: bottom;
+}
+.tekskecil{
+  font-size: 24px;
+  line-height: 1.25;
+  font-family: "Circular-Book"
+  color: #0f0f0f;
+}
+.ataskecil{
+  top: 40px;
+}
+.blob2{
+  width: 643px;
+  height: 319px;
+  left: 0px;
+  position: relative;
 }
