--- a/style.css
+++ b/style.css
@@ -11,117 +11,161 @@
     font-weight: 500;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'Circular-Bold';
     src: url('fonts/CircularStd-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'Circular-Book';
     src: url('fonts/CircularStd-Book.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
+
 .judul {
-  font-family: 'Circular-Book';
-  font-size: 50px;
-  color: #4834d4;
-  text-align: center;
-  vertical-align: center;
+    font-family: 'Circular-Book';
+    font-size: 50px;
+    color: #4834d4;
+    text-align: center;
+    vertical-align: center;
 }
+
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.kecil{
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-  color: white;
-  text-align: center;
-  vertical-align: center;
+
+.kecil {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    vertical-align: center;
 }
-.text{
-  padding-top: 0px;
+
+.text {
+    padding-top: 0px;
 }
-.test{
-  padding: 25px;
+
+.test {
+    padding: 25px;
 }
-.logoatas{
-  width: 75%;
-  position: absolute;
-  top: 0px;
-  right: 0px;
+
+.logoatas {
+    width: 75%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
-.kenangan{
-  text-align: left;
-  font-family: "Circular-Bold";
-  font-size: 76px;
-  color: #161743;
-  line-height: 1.26;
+
+.kenangan {
+    text-align: left;
+    font-family: "Circular-Bold";
+    font-size: 76px;
+    color: #161743;
+    line-height: 1.26;
 }
-.title{
-  left: 0px;
-  top: 199px;
-  vertical-align: bottom;
+
+.title {
+    left: 0px;
+    top: 199px;
+    vertical-align: bottom;
 }
-.tekskecil{
-  font-size: 24px;
-  line-height: 1.25;
-  font-family: "Circular-Book"
-  color: #0f0f0f;
+
+.tekskecil {
+    font-size: 24px;
+    line-height: 1.25;
+    font-family: "Circular-Book" color: #0f0f0f;
 }
-.ataskecil{
-  top: 40px;
+
+.ataskecil {
+    top: 40px;
 }
-.blob2{
-  width: 643px;
-  height: 319px;
-  left: 0px;
-  position: relative;
+
+.blob2 {
+    width: 643px;
+    height: 319px;
+    left: 0px;
+    position: relative;
 }
-.sambutan{
-  width: 550px;
-  margin-bottom: 0px;
-  font-family: Circular-Bold;
-  font-size: 68px;
-  line-height: 1.26;
-  text-align: left;
-  color: #161743;
+
+.sambutan {
+    width: 550px;
+    margin-bottom: 0px;
+    font-family: Circular-Bold;
+    font-size: 68px;
+    line-height: 1.26;
+    text-align: left;
+    color: #161743;
 }
-.namaketang{
-  width: 800px;
-  margin-bottom: 0px;
-  font-family: Circular-Bold;
-  font-size: 34px;
-  line-height: 1.26;
-  float: right;
-  text-align: right;
-  color: #161743;
+
+.namaketang {
+    width: 800px;
+    margin-bottom: 0px;
+    font-family: Circular-Bold;
+    font-size: 34px;
+    line-height: 1.26;
+    float: right;
+    text-align: right;
+    color: #161743;
 }
-.ketang{
-  font-family: Circular-Book;
-  font-size: 25px;
-  line-height: 1.28;
-  float: right;
-  text-align: right;
-  color: #161743;
+
+.ketang {
+    font-family: Circular-Book;
+    font-size: 25px;
+    line-height: 1.28;
+    float: right;
+    text-align: right;
+    color: #161743;
 }
-.isisambutan{
-  width: 500px;
-  margin-bottom: 0px;
-  font-family: Circular-Book;
-  font-size: 20px;
-  line-height: 1.25;
-  text-align: justify;
-  color: #707070;
-  padding-left: 1%;
+
+.isisambutan {
+    width: 500px;
+    margin-bottom: 0px;
+    font-family: Circular-Book;
+    font-size: 20px;
+    line-height: 1.25;
+    text-align: justify;
+    color: #707070;
+    padding-left: 1%;
 }
-.blob1{
-  width: 40%;
-  position: absolute;
-  top: 0px;
-  right: 0px;
+
+.blob1 {
+    width: 40%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
+
+.sejarah {
+    width: 356px;
+    height: 129px;
+    font-family: CircularStd;
+    font-size: 102px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.26;
+    letter-spacing: normal;
+    text-align: right;
+    color: #161743;
+}
+
+.isisejarah {
+    width: 834px;
+    height: 434px;
+    font-family: CircularStd;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.25;
+    letter-spacing: normal;
+    text-align: left;
+    color: #707070;
