--- a/style.css
+++ b/style.css
@@ -432,3 +432,6 @@ span:before {
     font-size: 1rem;
     box-shadow: 0 32px 64px 0 rgba(203, 27, 94, 0.5);
 }
+.indah{
+  text-decoration: none;
+}
